// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AtSwitch should render default AtSwitch 1`] = `
<view
  class="at-switch at-switch--without-border"
>
  <view
    class="at-switch__title"
  />
  <view
    class="at-switch__container"
  >
    <view
      class="at-switch__mask"
    />
    <switch
      checked="false"
      class="at-switch__switch"
      color="#6190e8"
    />
  </view>
</view>
`;

exports[`AtSwitch should render prop -- border 1`] = `
<view
  class="at-switch at-switch--without-border"
>
  <view
    class="at-switch__title"
  >
    开启中
  </view>
  <view
    class="at-switch__container"
  >
    <view
      class="at-switch__mask"
    />
    <switch
      checked="false"
      class="at-switch__switch"
      color="#6190e8"
    />
  </view>
</view>
`;

exports[`AtSwitch should render prop -- checked 1`] = `
<view
  class="at-switch at-switch--without-border"
>
  <view
    class="at-switch__title"
  >
    开启中
  </view>
  <view
    class="at-switch__container"
  >
    <view
      class="at-switch__mask"
    />
    <switch
      checked="true"
      class="at-switch__switch"
      color="#6190e8"
    />
  </view>
</view>
`;

exports[`AtSwitch should render prop -- disabled 1`] = `
<view
  class="at-switch at-switch--without-border"
>
  <view
    class="at-switch__title"
  >
    开启中
  </view>
  <view
    class="at-switch__container at-switch--disabled"
  >
    <view
      class="at-switch__mask"
    />
    <switch
      checked="true"
      class="at-switch__switch"
      color="#6190e8"
    />
  </view>
</view>
`;

exports[`AtSwitch should render prop -- disabled 2`] = `
<view
  class="at-switch at-switch--without-border"
>
  <view
    class="at-switch__title"
  >
    开启中
  </view>
  <view
    class="at-switch__container at-switch--disabled"
  >
    <view
      class="at-switch__mask"
    />
    <switch
      checked="false"
      class="at-switch__switch"
      color="#6190e8"
    />
  </view>
</view>
`;

exports[`AtSwitch should render prop -- title 1`] = `
<view
  class="at-switch at-switch--without-border"
>
  <view
    class="at-switch__title"
  >
    开启中
  </view>
  <view
    class="at-switch__container"
  >
    <view
      class="at-switch__mask"
    />
    <switch
      checked="false"
      class="at-switch__switch"
      color="#6190e8"
    />
  </view>
</view>
`;
